                                                        -*- coding: utf-8 -*-
Changes with Apache 2.2.6

  *) mod_cache: Remove expired content from cache that cannot be revalidated.
     PR 30370. [Ruediger Pluem]

  *) mod_proxy_http: accept proxy-sendchunked/proxy-sendchunks as synonymous.
     PR 43183 [Brian Rectanus <Brian.Rectanus breach.com>, Vincent Bray]

  *) mod_proxy: Ensure that at least scheme://hostname[:port] matches between
     worker and URL when searching for the best fitting worker for a given URL.
     PR 40910 [Ruediger Pluem]

  *) mod_proxy: Improve network performance by setting APR_TCP_NODELAY
     (disable Nagle algorithm) on sockets if implemented.
     PR 42871 [Christian BOITEL <christian_boitel yahoo.fr>, Jim Jagielski]

  *) core: Do not replace a Date header set by a proxied backend server.
     PR 40232 [Ruediger Pluem]

  *) mod_proxy: Add a missing assignment in an error checking code path.
     PR 40865 [Andrew Rucker Jones <arjones simultan.dyndns.org>]

  *) mod_proxy_connect: avoid segfault on DNS lookup failure.
     PR 40756 [Trevin Beattie <tbeattie boingo.com>]

  *) mod_proxy: enable Ignore Errors option on ProxyPass Status.
     PR 43167 [Francisco Gimeno <kikov kikov.org>

  *) mod_proxy_http: Don't try to read body of a HEAD request before
     responding.  PR 41644 [Stuart Children <stuart terminus.co.uk>]

  *) mod_authnz_ldap: Don't return HTTP_UNAUTHORIZED during authorization when
     LDAP authentication is configured but we haven't seen any 
     'Require ldap-*' directives, allowing authorization to be passed to lower 
     level modules (e.g. Require valid-user) 
     PR 43281 [Eric Covener]

  *) mod_proxy: don't URLencode tilde in path component
     PR 38448 [Stijn Hoop <stijn sandcat.nl>]

  *) proxy/ajp_header.c: Fixed header token string comparisons
     Matching of header tokens failed to include the trailing NIL byte
     and could misinterpret a longer header token for a shorter.